; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_somread.c_som_symfile_finish.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_somread.c_som_symfile_finish.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.objfile = type { i32*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.objfile*)* @som_symfile_finish to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @som_symfile_finish(%struct.objfile* %0) #0 {
  %2 = alloca %struct.objfile*, align 8
  store %struct.objfile* %0, %struct.objfile** %2, align 8
  %3 = load %struct.objfile*, %struct.objfile** %2, align 8
  %4 = getelementptr inbounds %struct.objfile, %struct.objfile* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %15

7:                                                ; preds = %1
  %8 = load %struct.objfile*, %struct.objfile** %2, align 8
  %9 = getelementptr inbounds %struct.objfile, %struct.objfile* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 8
  %11 = load %struct.objfile*, %struct.objfile** %2, align 8
  %12 = getelementptr inbounds %struct.objfile, %struct.objfile* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = call i32 @xmfree(i32 %10, i32* %13)
  br label %15

15:                                               ; preds = %7, %1
  %16 = load %struct.objfile*, %struct.objfile** %2, align 8
  %17 = call i32 @hpread_symfile_finish(%struct.objfile* %16)
  ret void
}

declare dso_local i32 @xmfree(i32, i32*) #1

declare dso_local i32 @hpread_symfile_finish(%struct.objfile*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
